--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -3,6 +3,9 @@
   "version": "0.12.3",
   "homepage": "./",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0 <19.0.0"
+  },
   "dependencies": {
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.0",
@@ -16,6 +19,8 @@
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "webpack": "^5.91.0"
   },
   "scripts": {
@@ -61,8 +66,6 @@
     "path-browserify": "^1.0.1",
     "postcss-loader": "^7.0.1",
     "process": "^0.11.10",
-    "sass": "*",
-    "sass-loader": "^13.1.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "style-loader": "^3.2.1",
