--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -7,6 +7,7 @@
     "node": ">=18.0.0 <19.0.0"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.24.1",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.0",
     "bos-workspace": "github:urbit/bos-workspace",
