--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.9.0",
     "bos-workspace": "github:urbit/bos-workspace",
     "dompurify": "^3.0.6",
+    "dotenv-webpack": "^8.1.0",
     "error-polyfill": "^0.1.2",
     "near-api-js": "^2.1.3",
     "near-social-vm": "github:urbit/NearSocialVM#vm-out",
