watch bos-workspace local components on pnpm watch added

--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -8,13 +8,19 @@
   },
   "scripts": {
     "serve": "webpack serve",
+    "watch": "npm-watch",
     "webpack": "webpack",
     "dev": "pnpm run component-build && pnpm run serve -- --env mode=development",
-    "prod": "pnpm run webpack -- --env mode=production",
+    "prod": "pnpm run component-build && pnpm run webpack -- --env mode=production",
     "prod:analyze": "pnpm run prod -- --env presets=analyze",
     "build": "pnpm run prod",
     "start": "pnpm run dev",
     "component-build": "bos-workspace dev"
+  },
+  "watch": {
+    "component-build": [
+      "apps/widget/components/**.*"
+    ]
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -25,6 +31,7 @@
     "error-polyfill": "^0.1.3",
     "near-api-js": "^2.1.4",
     "near-social-vm": "github:urbit/NearSocialVm",
+    "npm-watch": "^0.13.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-typeahead": "^6.3.2",
