--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -59,6 +59,29 @@
       "last 1 safari version"
     ]
   },
+  "pnpm": {
+    "loglevel": "silent",
+    "allowedDeprecatedVersions": {
+      "@babel/plugin-proposal-async-generator-functions": "7.20.7",
+      "@babel/plugin-proposal-class-properties": "7.18.6",
+      "@babel/plugin-proposal-logical-assignment-operators": "7.20.7",
+      "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
+      "@babel/plugin-proposal-numeric-separator": "7.18.6",
+      "@babel/plugin-proposal-object-rest-spread": "7.20.7",
+      "@babel/plugin-proposal-optional-catch-binding": "7.18.6",
+      "@babel/plugin-proposal-optional-chaining": "7.21.0",
+      "multibase": "4.0.6",
+      "querystring": "0.2.1",
+      "react-uuid": "1.0.3",
+      "stable": "0.1.8"
+    },
+    "peerDependencyRules": {
+      "allowAny": [
+        "near-api-js",
+        "react"
+      ]
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
