--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -29,9 +29,8 @@
     "dompurify": "^3.1.2",
     "dotenv-webpack": "^8.1.0",
     "error-polyfill": "^0.1.3",
-    "near-api-js": "^2.1.4",
-    "near-social-vm": "github:urbit/NearSocialVm",
     "npm-watch": "^0.13.0",
+    "near-api-js": "^2.1.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-typeahead": "^6.3.2",
@@ -40,7 +39,8 @@
     "sass": "^1.76.0",
     "sass-loader": "^14.2.1",
     "webpack": "^5.91.0",
-    "@urbit/http-api": "^2.3.0"
+    "@urbit/http-api": "^2.3.0",
+    "near-social-vm": "github:urbit/NearSocialVM"
   },
   "eslintConfig": {
     "extends": [
