Run component-build before build

--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -10,11 +10,11 @@
     "serve": "webpack serve",
     "watch": "npm-watch",
     "webpack": "webpack",
-    "dev": "pnpm run component-build && pnpm run serve -- --env mode=development",
-    "prod": "pnpm run component-build && pnpm run webpack -- --env mode=production",
-    "prod:analyze": "pnpm run prod -- --env presets=analyze",
-    "build": "pnpm run prod",
-    "start": "concurrently \"pnpm run watch\" \"pnpm run dev\"",
+    "dev": "npm run component-build && npm run serve -- --env mode=development",
+    "prod": "npm run webpack -- --env mode=production",
+    "prod:analyze": "npm run prod -- --env presets=analyze",
+    "build": "npm run component-build && npm run prod",
+    "start": "npm run dev",
     "component-build": "bos-workspace dev"
   },
   "watch": {
