--- a/templates/frontend/gateway/.env
+++ b/templates/frontend/gateway/.env
@@ -1,5 +1,5 @@
-#  Testing environment settings
-#  Fakeship credentials
-REACT_APP_SHIP=zod
-REACT_APP_HOST=http://localhost:8080
-REACT_APP_CODE=lidlut-tabwed-pillex-ridrup
+# Manual API config
+# Only used in development builds
+SHIP=zod
+URL=http://localhost:8080
+CODE=lidlut-tabwed-pillex-ridrup
