--- a/templates/frontend/gateway/package.json
+++ b/templates/frontend/gateway/package.json
@@ -27,7 +27,7 @@
     "dotenv-webpack": "^8.1.0",
     "error-polyfill": "^0.1.3",
     "near-api-js": "^2.1.3",
-    "near-social-vm": "github:urbit/NearSocialVM",
+    "near-social-vm": "github:urbit/NearSocialVM#main",
     "near-social-vm-types": "^1.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
